# wifi-boat-project

./: Cargo.toml  README.md  build.rs  espflash.toml  test.http
.github/: CODEOWNERS  renovate.json
src/: boat.rs  main.rs  server.rs  wifi.rs
src/boat/: mod.rs  motor.rs  rudder.rs
src/web/: index.html
web/: index.html
